<resources>
    <string name="app_name">Easy News</string>
    <string name="title_news">News</string>
    <string name="tab_news">News</string>
    <string name="tab_favourites">Favourites</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$s</string>
    <string name="en">EN</string>
    <string name="weather">WEATHER</string>
    <string name="profile">PROFILE</string>
    <string name="news">NEWS</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="_national">&#160;&#160;&#160;&#160; - National</string>
    <string name="_international">&#160;&#160;&#160;&#160; - International</string>
    <string name="_sports">&#160;&#160;&#160;&#160; - Sports</string>
    <string name="_entertainment">&#160;&#160;&#160;&#160; - Entertainment</string>
    <string name="_fashion">&#160;&#160;&#160;&#160; - Fashion</string>
    <string name="_business">&#160;&#160;&#160;&#160; - Business</string>
    <string name="_technology">&#160;&#160;&#160;&#160; - Technology</string>
    <string name="_health">&#160;&#160;&#160;&#160; - Health</string>
    <string name="bookmark">Bookmark</string>
    <string name="news_image">News Image</string>
    <string name="nothing_added_to_favourites">Nothing added to favourites yet.  Bookmark article to see them here.</string>
    <string name="version_no">Version 1.0</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="title_weather">Weather</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">Location Permission Denied</string>
</resources>
