<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkGray"
    android:gravity="center_vertical"
    android:paddingLeft="16dp"
    android:paddingTop="30dp"
    android:paddingRight="16dp"
    android:paddingBottom="30dp">

    <LinearLayout
        android:id="@+id/icon_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_header_icon"
        android:elevation="1dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/en"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/icon_ll"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:text="@string/version_no"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
